# lixun

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
.sisyphus/plans/: preview-rich-quicklook.md  spotlight-wave-a-ranking.md
crates/lixun-cli/: Cargo.toml
crates/lixun-cli/src/: main.rs
crates/lixun-cli/src/dashboard/: app.rs  config_mutation.rs  event.rs  log_entry.rs  mod.rs  tui.rs
crates/lixun-cli/src/dashboard/ui/: index_stats.rs  legend.rs  log_viewer.rs  mod.rs  query_input.rs  reindex_controls.rs  results_list.rs  services_panel.rs  socket_panel.rs
crates/lixun-core/: Cargo.toml
crates/lixun-core/src/: impact.rs  lib.rs  paths.rs
crates/lixun-daemon/: Cargo.toml
crates/lixun-daemon/src/: battery.rs  config.rs  frecency.rs  gui_control.rs  history.rs  hotkeys.rs  lib.rs  main.rs  portal_identity.rs  preview_spawn.rs  query_latch.rs  query_log.rs  sched.rs  semantic_supervisor.rs  session_env.rs  top_hit.rs
crates/lixun-daemon/tests/: config_test.rs  example_config.rs  reindex_full.rs  semantic_backfill_e2e.rs  semantic_supervisor.rs
crates/lixun-extract/: Cargo.toml
crates/lixun-extract/src/: cache.rs  lib.rs  ocr.rs  ocr_queue.rs  shell.rs
crates/lixun-fusion/: Cargo.toml
crates/lixun-fusion/src/: ann.rs  debug.rs  handle.rs  lib.rs  rrf.rs
crates/lixun-gui/: Cargo.toml  style.css
crates/lixun-gui-iced/: Cargo.toml  FINDINGS.md
crates/lixun-gui-iced/src/: icons.rs  ipc.rs  main.rs  theme.rs
crates/lixun-gui/src/: actions.rs  attachments.rs  factory.rs  gui_server.rs  icons.rs  ipc.rs  kde_blur.rs  keymap.rs  launcher_position.rs  lib.rs  main.rs  opaque_region.rs  reaper.rs  status.rs  window.rs
crates/lixun-image-decode/: Cargo.toml
crates/lixun-image-decode/src/: lib.rs
crates/lixun-index/: Cargo.toml
crates/lixun-index/benches/: ranking_bench.rs
crates/lixun-index/src/: lib.rs  normalize.rs  plugin_schema.rs  scoring.rs  tokenizer.rs
crates/lixun-indexer/: Cargo.toml
crates/lixun-indexer/src/: cache_sweep.rs  index_service.rs  indexer.rs  lib.rs  ocr_tick.rs  plugin_fs_watcher.rs  psi_gate.rs  registry.rs  sources_api.rs  tick_scheduler.rs  watcher.rs  writer_sink.rs
crates/lixun-ipc/: Cargo.toml
crates/lixun-ipc/src/: gui.rs  lib.rs  preview.rs
crates/lixun-mutation/: Cargo.toml
crates/lixun-mutation/src/: lib.rs
crates/lixun-plugin-bundle/: Cargo.toml
crates/lixun-plugin-bundle/src/: lib.rs
crates/lixun-preview/: Cargo.toml
crates/lixun-preview-av/: Cargo.toml
crates/lixun-preview-av/src/: lib.rs
crates/lixun-preview-bin/: Cargo.toml
crates/lixun-preview-bin/src/: main.rs  stub.rs  wayland_xdg_foreign.rs
crates/lixun-preview-bundle/: Cargo.toml
crates/lixun-preview-bundle/src/: lib.rs
crates/lixun-preview-code/: Cargo.toml
crates/lixun-preview-code/src/: lib.rs
crates/lixun-preview-email/: Cargo.toml
crates/lixun-preview-email/src/: lib.rs
crates/lixun-preview-image/: Cargo.toml
crates/lixun-preview-image/src/: lib.rs
crates/lixun-preview-office/: Cargo.toml
crates/lixun-preview-office/src/: lib.rs
crates/lixun-preview-pdf/: Cargo.toml
crates/lixun-preview-pdf/src/: canvas.rs  canvas_scrollable.rs  canvas_search.rs  canvas_tests.rs  document_session.rs  icons.rs  lib.rs  page_widget.rs  poppler_host.rs  region_image.rs  search.rs  search_bar.rs  selection.rs  widget.rs  widget_search.rs  worker.rs
crates/lixun-preview-pdf/tests/: cross_page_selection.rs  multi-page.gen.tex  page_nav.rs  search.rs
crates/lixun-preview-text/: Cargo.toml
crates/lixun-preview-text/src/: lib.rs
crates/lixun-preview/src/: lib.rs
crates/lixun-semantic-proto/: Cargo.toml
crates/lixun-semantic-proto/src/: lib.rs
crates/lixun-semantic-worker/: Cargo.toml
crates/lixun-semantic-worker/src/: ann.rs  config.rs  embedder.rs  ipc_doc_store.rs  journal.rs  main.rs  query_router.rs  worker.rs
crates/lixun-semantic-worker/tests/: handshake_search.rs
crates/lixun-source-calculator/: Cargo.toml
crates/lixun-source-calculator/src/: detect.rs  factory.rs  lib.rs  source.rs
crates/lixun-source-maildir/: Cargo.toml
crates/lixun-source-maildir/src/: factory.rs  lib.rs  walk.rs
crates/lixun-source-semantic/: Cargo.toml
crates/lixun-source-semantic-stub/: Cargo.toml
crates/lixun-source-semantic-stub/src/: factory.rs  lib.rs  source.rs  transport.rs
crates/lixun-source-semantic/src/: ann.rs  broadcaster.rs  config.rs  embedder.rs  factory.rs  lib.rs  source.rs  store.rs  worker.rs
crates/lixun-source-shell/: Cargo.toml
crates/lixun-source-shell/src/: factory.rs  lib.rs  source.rs
crates/lixun-source-thunderbird/: Cargo.toml
crates/lixun-source-thunderbird/src/: attachments.rs  factory.rs  gloda.rs
crates/lixun-sources/: Cargo.toml
crates/lixun-sources/src/: apps.rs  exclude.rs  fs.rs  has_body.rs  lib.rs  manifest.rs  mime_icons.rs  ocr_enqueue.rs  source.rs
crates/lupa-cli/: Cargo.toml
crates/lupa-cli/src/: main.rs
crates/lupa-core/: Cargo.toml
crates/lupa-core/src/: lib.rs
crates/lupa-daemon/: Cargo.toml
crates/lupa-daemon/src/: config.rs  gloda_poll.rs  history.rs  hotkeys.rs  index_service.rs  indexer.rs  lib.rs  main.rs  search_service.rs  session_env.rs  source_watcher.rs  watcher.rs
crates/lupa-extract/: Cargo.toml
crates/lupa-extract/src/: lib.rs  (+1 more)
crates/lupa-gui/: Cargo.toml  style.css
crates/lupa-index/: Cargo.toml
crates/lupa-indexer/: Cargo.toml
crates/lupa-ipc/: Cargo.toml
crates/lupa-plugin-bundle/: Cargo.toml
crates/lupa-source-maildir/: Cargo.toml
crates/lupa-source-thunderbird/: Cargo.toml
crates/lupa-sources/: Cargo.toml
docs/: QA-spotlight-parity.md  architecture.md  config.example.toml  gui-memory.md  migration-lupa-to-lixun.md  ocr.md  search-fusion.md  style.example.css  system-impact.md  wave-d-semantic.md
docs/research/: 2026-05-research-findings.md
packaging/arch/: PKGBUILD  lixun.desktop  lupa.desktop  systemd-lixund.service
packaging/desktop/: app.lixun.daemon.desktop
packaging/systemd/: lixund.service  lupad.service
scripts/: qa-wave-d.sh
tests/it/: main.rs
(+68 files in other folders)
