[workspace]
members = [
    "crates/lupa-core",
    "crates/lupa-ipc",
    "crates/lupa-index",
    "crates/lupa-extract",
    "crates/lupa-sources",
    "crates/lupa-daemon",
    "crates/lupa-cli",
]
# lupa-gui excluded — requires GTK4 dev libraries
# add to workspace when building on a machine with GTK4 installed
exclude = ["crates/lupa-gui"]
resolver = "2"
