[workspace]
members = [
    "crates/lupa-core",
    "crates/lupa-ipc",
    "crates/lupa-index",
    "crates/lupa-extract",
    "crates/lupa-sources",
    "crates/lupa-daemon",
    "crates/lupa-gui",
    "crates/lupa-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Spotlight-like launcher for Linux"

[workspace.dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# Index
tantivy = "0.22"

# File watching
notify = "7.0"
walkdir = "2.5"

# Extractors
chardetng = "0.1"
zip = "2.2"
rtf-grimoire = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async IPC
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"

# Concurrency
rayon = "1.10"
num_cpus = "1.16"

tempfile = "3"
