[workspace]
members = [
    "crates/lixun-core",
    "crates/lixun-ipc",
    "crates/lixun-index",
    "crates/lixun-extract",
    "crates/lixun-sources",
    "crates/lixun-source-maildir",
    "crates/lixun-source-thunderbird",
    "crates/lixun-source-calculator",
    "crates/lixun-source-shell",
    "crates/lixun-plugin-bundle",
    "crates/lixun-indexer",
    "crates/lixun-daemon",
    "crates/lixun-gui",
    "crates/lixun-cli",
    "crates/lixun-preview",
    "crates/lixun-preview-bundle",
    "crates/lixun-preview-bin",
    "crates/lixun-preview-text",
    "crates/lixun-preview-image",
    "crates/lixun-preview-pdf",
    "crates/lixun-preview-code",
    "crates/lixun-preview-email",
    "crates/lixun-preview-office",
    "crates/lixun-preview-av",
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
description = "Spotlight-like launcher for Linux"

[workspace.dependencies]
# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }

# Index
tantivy = "0.26.1"

# File watching
notify = "7.0"
walkdir = "2.5"

# Extractors
chardetng = "0.1"
zip = "2.2"
rtf-grimoire = "0.2"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async IPC
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.0"

# Concurrency
rayon = "1.10"
num_cpus = "1.16"

# Text
regex = "1"

# Compile-time plugin registration
inventory = "0.3"

tempfile = "3"
unicode-normalization = "0.1"

# Extract cache + OCR queue (added OCR v1)
blake3 = "1"
zstd = "0.13"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
image = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }

# Profile for memory profiling: release optimizations + full debug info
# so heaptrack/valgrind can resolve symbols. Used for diagnosis only;
# production builds keep the default release profile (no debug info).
[profile.release-debug]
inherits = "release"
debug = "full"
strip = "none"
