[package]
name = "lixun-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lixun-cli"
path = "src/main.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-ipc = { path = "../lixun-ipc" }
lixun-mutation = { path = "../lixun-mutation" }
lixun-sources = { path = "../lixun-sources" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
tokio-util.workspace = true
dirs.workspace = true
toml.workspace = true
regex.workspace = true

[dev-dependencies]
lixun-index = { path = "../lixun-index" }
lixun-sources = { path = "../lixun-sources" }
tempfile = "3"

[[test]]
name = "it"
path = "../../tests/it/main.rs"
