[package]
name = "lixun-extract"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chardetng.workspace = true
encoding_rs = "0.8"
tracing.workspace = true
zip.workspace = true
rtf-grimoire.workspace = true
which = "6"
tempfile = "3"
wait-timeout = "0.2"
libc = "0.2"
blake3 = { workspace = true }
zstd = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
image = { workspace = true }

[dev-dependencies]
tempfile = "3"
