[package]
name = "lixun-fusion"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lixun_fusion"
path = "src/lib.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-indexer = { path = "../lixun-indexer" }
lixun-mutation = { path = "../lixun-mutation" }
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true }
tokio-util = "0.7"
serde.workspace = true
async-trait = "0.1"
