[package]
name = "lixun-index"
version.workspace = true
edition.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
anyhow.workspace = true
tantivy.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
unicode-normalization = { workspace = true }

[dev-dependencies]
tempfile = "3"
