[package]
name = "lixun-indexer"
version.workspace = true
edition.workspace = true

[lib]
name = "lixun_indexer"
path = "src/lib.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-extract = { path = "../lixun-extract" }
lixun-index = { path = "../lixun-index" }
lixun-sources = { path = "../lixun-sources" }
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
notify.workspace = true
walkdir.workspace = true
regex.workspace = true
rusqlite = "0.31"
async-channel = "2"

[dev-dependencies]
tempfile = "3"
