[package]
name = "lixun-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lixun_indexer"
path = "src/lib.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-extract = { path = "../lixun-extract" }
lixun-index = { path = "../lixun-index" }
lixun-mutation = { path = "../lixun-mutation" }
lixun-sources = { path = "../lixun-sources" }
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
notify.workspace = true
walkdir.workspace = true
regex.workspace = true
rusqlite = { workspace = true }
async-channel = "2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
