[package]
name = "lixun-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-mutation = { path = "../lixun-mutation" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
bytes.workspace = true
chrono.workspace = true
dirs = "5"
libc = "0.2"
