[package]
name = "lixun-plugin-bundle"
version.workspace = true
edition.workspace = true

[lib]
name = "lixun_plugin_bundle"
path = "src/lib.rs"

[features]
default = ["maildir", "thunderbird", "calculator", "shell"]
maildir = ["dep:lixun-source-maildir"]
thunderbird = ["dep:lixun-source-thunderbird"]
calculator = ["dep:lixun-source-calculator"]
shell = ["dep:lixun-source-shell"]

[dependencies]
lixun-source-maildir = { path = "../lixun-source-maildir", optional = true }
lixun-source-thunderbird = { path = "../lixun-source-thunderbird", optional = true }
lixun-source-calculator = { path = "../lixun-source-calculator", optional = true }
lixun-source-shell = { path = "../lixun-source-shell", optional = true }
