[package]
name = "lixun-preview-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lixun-preview"
path = "src/main.rs"

[features]
default = ["stub"]
stub = []

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-preview = { path = "../lixun-preview" }
lixun-preview-bundle = { path = "../lixun-preview-bundle" }
lixun-daemon = { path = "../lixun-daemon" }
anyhow.workspace = true
clap.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
glib = "0.20"
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
gtk4-layer-shell = "0.5"
