[package]
name = "lixun-preview-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lixun-preview"
path = "src/main.rs"

[features]
default = []
stub = []

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-preview = { path = "../lixun-preview" }
lixun-preview-bundle = { path = "../lixun-preview-bundle" }
lixun-daemon = { path = "../lixun-daemon" }
lixun-ipc = { path = "../lixun-ipc" }
anyhow.workspace = true
clap.workspace = true
inventory.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-channel = "2"
libc = "0.2"
glib = "0.22"
gtk = { package = "gtk4", version = "0.11", features = ["v4_16"] }
