[package]
name = "lixun-preview-bundle"
version.workspace = true
edition.workspace = true

[lib]
name = "lixun_preview_bundle"
path = "src/lib.rs"

[features]
default = ["text", "image", "pdf", "code", "email", "office", "av"]
text = ["dep:lixun-preview-text"]
image = ["dep:lixun-preview-image"]
pdf = ["dep:lixun-preview-pdf"]
code = ["dep:lixun-preview-code"]
email = ["dep:lixun-preview-email"]
office = ["dep:lixun-preview-office"]
av = ["dep:lixun-preview-av"]

[dependencies]
lixun-preview = { path = "../lixun-preview" }
lixun-preview-text = { path = "../lixun-preview-text", optional = true }
lixun-preview-image = { path = "../lixun-preview-image", optional = true }
lixun-preview-pdf = { path = "../lixun-preview-pdf", optional = true }
lixun-preview-code = { path = "../lixun-preview-code", optional = true }
lixun-preview-email = { path = "../lixun-preview-email", optional = true }
lixun-preview-office = { path = "../lixun-preview-office", optional = true }
lixun-preview-av = { path = "../lixun-preview-av", optional = true }

[dev-dependencies]
lixun-core = { path = "../lixun-core" }
