[package]
name = "lixun-preview-code"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-preview = { path = "../lixun-preview" }
anyhow.workspace = true
inventory.workspace = true
tracing.workspace = true
gtk = { package = "gtk4", version = "0.11", features = ["v4_16"] }
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }

[dev-dependencies]
toml = "0.8"

[lib]
name = "lixun_preview_code"
path = "src/lib.rs"
