[package]
name = "lixun-preview-office"
version.workspace = true
edition.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-preview = { path = "../lixun-preview" }
anyhow.workspace = true
inventory.workspace = true
tracing.workspace = true
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
gdk = { package = "gdk4", version = "0.9" }
glib = "0.20"
gio = "0.20"
async-channel = "2"
sha2 = "0.10"
dirs = "5"
libc = "0.2"

[lib]
name = "lixun_preview_office"
path = "src/lib.rs"
