[package]
name = "lixun-preview-office"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-preview = { path = "../lixun-preview" }
lixun-preview-pdf = { path = "../lixun-preview-pdf" }
anyhow.workspace = true
inventory.workspace = true
tracing.workspace = true
gtk = { package = "gtk4", version = "0.11", features = ["v4_16"] }
glib = "0.22"
gio = "0.22"
async-channel = "2"
sha2 = "0.10"
dirs = "5"
libc = "0.2"

[lib]
name = "lixun_preview_office"
path = "src/lib.rs"
