[package]
name = "lixun-preview-pdf"
version.workspace = true
edition.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-preview = { path = "../lixun-preview" }
anyhow.workspace = true
inventory.workspace = true
tracing.workspace = true
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
poppler-rs = "0.26"
cairo-rs = "0.22"
gdk = { package = "gdk4", version = "0.9" }
glib = "0.20"
gio = "0.20"

[lib]
name = "lixun_preview_pdf"
path = "src/lib.rs"
