[package]
name = "lixun-preview-pdf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-preview = { path = "../lixun-preview" }
anyhow.workspace = true
inventory.workspace = true
tracing.workspace = true
gtk = { package = "gtk4", version = "0.11", features = ["v4_16"] }
poppler-rs = "0.26"
cairo-rs = "0.22"
gdk = { package = "gdk4", version = "0.11" }
graphene = { package = "graphene-rs", version = "0.22" }
glib = "0.22"
gio = "0.22"
async-channel = "2"
lru = "0.12"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[lib]
name = "lixun_preview_pdf"
path = "src/lib.rs"
