[package]
name = "lixun-preview"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lixun-core = { path = "../lixun-core" }
anyhow.workspace = true
inventory.workspace = true
tracing.workspace = true
glib = "0.22"
gtk = { package = "gtk4", version = "0.11", features = ["v4_16"] }
dirs = "5"
toml = "0.8"

[lib]
name = "lixun_preview"
path = "src/lib.rs"
