[package]
name = "lixun-semantic-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic-search sidecar worker spawned by lixund."

[[bin]]
name = "lixun-semantic-worker"
path = "src/main.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-mutation = { path = "../lixun-mutation" }
lixun-semantic-proto = { path = "../lixun-semantic-proto" }
lixun-image-decode = { path = "../lixun-image-decode", optional = true }

# Heavy ML stack — same workspace pins as the in-process plugin.
fastembed = { workspace = true }
lancedb = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }

tokio = { workspace = true }
# `codec` is required for FrameCodec's Encoder/Decoder traits; the
# workspace pin only enables `io`.
tokio-util = { workspace = true, features = ["io", "codec"] }
futures = "0.3"
async-trait = "0.1"

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytes.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { workspace = true }
rusqlite = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = "3"

[features]
default = ["image-decode"]
image-decode = ["lixun-image-decode"]

