[package]
name = "lixun-source-calculator"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lixun_source_calculator"
path = "src/lib.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-sources = { path = "../lixun-sources" }
anyhow.workspace = true
serde.workspace = true
toml = "0.8"
tracing.workspace = true
# Maintained fork of meval (upstream rekka/meval-rs frozen on nom 1.x);
# this fork tracks nom 8 and is API-compatible. Pinned to exact revision
# for reproducibility.
meval = { git = "https://github.com/ryanwohara/meval-rs", rev = "959239b2df5d746e5683277c8a86a1e07a140230" }
