[package]
name = "lixun-source-maildir"
version.workspace = true
edition.workspace = true

[lib]
name = "lixun_source_maildir"
path = "src/lib.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-sources = { path = "../lixun-sources" }
anyhow.workspace = true
mailparse = "0.15"
serde.workspace = true
toml = "0.8"
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
