[package]
name = "lixun-source-semantic"
version.workspace = true
edition.workspace = true

[lib]
name = "lixun_source_semantic"
path = "src/lib.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-sources = { path = "../lixun-sources" }
lixun-mutation = { path = "../lixun-mutation" }
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
inventory.workspace = true
toml = "0.8"
dirs = "5"
rusqlite = { workspace = true }

# Heavy ML stack pulled in unconditionally for this plugin: presence
# of this crate in the build graph already implies opt-in via the
# bundle's `semantic` feature (see lixun-plugin-bundle/Cargo.toml).
fastembed = { workspace = true }
lancedb = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
