[package]
name = "lixun-source-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lixun_source_shell"
path = "src/lib.rs"

[dependencies]
lixun-core = { path = "../lixun-core" }
lixun-sources = { path = "../lixun-sources" }
anyhow.workspace = true
serde.workspace = true
toml = "0.8"
tracing.workspace = true
regex.workspace = true
dirs = "5"
